<resources>
    <string name="app_name">InnowiseDesign</string>
    <string name="button">Button</string>
    <string name="content1">Composition:
 Within each layout region, it’s important to arrange components and internal elements in a way that preserves visual and functional relationships between elements across all screen sizes.
Navigation is the act of moving between screens of an app to complete tasks.
It’s enabled through several means: dedicated navigation components, embedding navigation behavior into content, and platform affordances.</string>
    <string name="content2">Visual grouping: The first step to creating order in a layout is visual grouping. The first step to creating order in a layout is visual grouping. Elements in a layout that have similar content or functionality can be grouped together and separated from other elements using open space, typography, and dividers. \n Navigational directions \nBased on your app’s information architecture, a user can move in one of three navigational directions: Lateral navigation refers to moving between screens at the same level of hierarchy.\n Material Design comes designed with a built-in, baseline theme that can be used as-is, straight out of the proverbial box.</string>
    <string name="back">back</string>
    <string name="likes">likes</string>
    <string name="comments">comments</string>
    <string name="views">views</string>
    <string name="_6">+6</string>
    <string name="follow">+ Follow</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_1_screen">1 screen</string>
    <string name="_2_screen">2 screen</string>
    <string name="_3_screen">3 screen</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="hidden">Hidden</string>
    <string name="image">image</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="add_alpha">Add Alpha</string>
    <string name="remove_alpha">Remove Alpha</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="animate_with_random_value">Animate with random value</string>
</resources>
