<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".dinamic_ui.Screen3">

    <Button
        android:id="@+id/addAlphaBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/add_alpha" />

    <Button
        android:id="@+id/removeAlphaBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addAlphaBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/remove_alpha" />

    <ImageView
        android:id="@+id/transparentImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addAlphaBt"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        android:contentDescription="@string/image" />

</androidx.constraintlayout.widget.ConstraintLayout>