<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dinamic_ui.StartScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/little_square1"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/screen1_bt"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/round_buttons1"
            android:text="@string/_1_screen"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/screen2_bt"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_buttons1"
            android:text="@string/_2_screen"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/screen3_bt"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_buttons1"
            android:text="@string/_3_screen"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>