<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".profile_layout.ProfileActivity">

    <View
        android:id="@+id/viewId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_color1"
        android:elevation="1dp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="124dp" />

    <ImageButton
        android:id="@+id/back_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:contentDescription="@string/back"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/options_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_baseline_more_horiz_24"
        android:contentDescription="@string/back"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/viewId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewId" />

    <View
        android:id="@+id/avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_background"
        android:elevation="3dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/back_bt"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintWidth_percent="0.12" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/active"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/nickname" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/follow_button"
        android:elevation="3dp"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/options_bt"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <View
        android:id="@+id/delimetr"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/very_gray"
        android:elevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        tools:layout_editor_absoluteX="64dp" />

    <TextView
        android:id="@+id/recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/delimetr" />

    <TextView
        android:id="@+id/recommend_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/options_bt"
        app:layout_constraintTop_toBottomOf="@id/delimetr" />

    <View
        android:id="@+id/avatar1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_background"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/back_bt"
        app:layout_constraintTop_toBottomOf="@id/recommend_amount"
        app:layout_constraintWidth_percent="0.07" />

    <View
        android:id="@+id/avatar2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/circle_background"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/avatar1"
        app:layout_constraintStart_toEndOf="@id/avatar1"
        app:layout_constraintTop_toBottomOf="@id/recommend_amount"
        app:layout_constraintWidth_percent="0.07" />

    <View
        android:id="@+id/avatar3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/circle_background"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/avatar2"
        app:layout_constraintStart_toEndOf="@id/avatar2"
        app:layout_constraintTop_toBottomOf="@id/recommend_amount"
        app:layout_constraintWidth_percent="0.07" />

    <View
        android:id="@+id/avatar4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/circle_background"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/avatar3"
        app:layout_constraintStart_toEndOf="@id/avatar3"
        app:layout_constraintTop_toBottomOf="@id/recommend_amount"
        app:layout_constraintWidth_percent="0.07" />

    <TextView
        android:id="@+id/avatar_others"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/text_circle"
        android:elevation="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@id/avatar4"
        app:layout_constraintTop_toBottomOf="@id/recommend_amount"
        app:layout_constraintWidth_percent="0.07" />

    <TextView
        android:id="@+id/likes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/avatar1"
        app:layout_constraintEnd_toEndOf="@id/options_bt"
        app:layout_constraintTop_toTopOf="@id/avatar1" />

    <ImageView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:elevation="3dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintBottom_toBottomOf="@id/avatar1"
        app:layout_constraintEnd_toStartOf="@id/likes_tv"
        app:layout_constraintTop_toTopOf="@id/avatar1"
        android:contentDescription="@string/likes" />

    <TextView
        android:id="@+id/comments_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:elevation="3dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/avatar1"
        app:layout_constraintEnd_toStartOf="@id/likes"
        app:layout_constraintTop_toTopOf="@id/avatar1" />

    <ImageView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:elevation="3dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/avatar1"
        app:layout_constraintEnd_toStartOf="@id/comments_tv"
        app:layout_constraintTop_toTopOf="@id/avatar1"
        android:contentDescription="@string/comments" />

    <TextView
        android:id="@+id/views_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:elevation="3dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/avatar1"
        app:layout_constraintEnd_toStartOf="@id/comments"
        app:layout_constraintTop_toTopOf="@id/avatar1" />

    <ImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:elevation="3dp"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@id/avatar1"
        app:layout_constraintEnd_toStartOf="@id/views_tv"
        app:layout_constraintTop_toTopOf="@id/avatar1"
        android:contentDescription="@string/views" />

</androidx.constraintlayout.widget.ConstraintLayout>